# markdown-neuraxis

./: .editorconfig  .gitattributes  AGENTS.md  CLAUDE.local.md  CLAUDE.md  Cargo.toml  Dioxus.toml  README.md  TASKS.md  adb-logcat.sh  android-load-example-notes.sh  android-reset-emulator.sh  build-android-dx-emulator.sh  build-android-dx.sh  build-android.sh  cliff.toml  connect-emulator-headless-ports.sh  connect-emulator-headless.sh  deny.toml  design.md  dev-android-targets.sh  dev-setup.sh  dev-toolchain.sh  development.md  dx-config.sh  install-ktlint.sh  lint.sh  list-emulator-devices.sh  patch-android-manifest.sh  preview-release-notes.sh  release-notes.sh  reset-desktop.sh  run-android-app-emulator.sh  run-android-app.sh  run-apk-adb-emulator.sh  run-apk-adb.sh  run-desktop-example.sh  run-desktop-setup.sh  run-emulator-headless.sh  run-emulator.sh  (+5 more)
crates/markdown-neuraxis-cli/: Cargo.toml
crates/markdown-neuraxis-cli/src/: lib.rs  main.rs
crates/markdown-neuraxis-config/: Cargo.toml
crates/markdown-neuraxis-config/src/: lib.rs
crates/markdown-neuraxis-config/src/assets/: config.toml
crates/markdown-neuraxis-dioxus/: AndroidManifest.xml  Cargo.toml  build.rs
crates/markdown-neuraxis-dioxus/benches/: ui_pipeline.rs
crates/markdown-neuraxis-dioxus/src/: lib.rs  main.rs
crates/markdown-neuraxis-dioxus/src/assets/: solarized-light.css
crates/markdown-neuraxis-dioxus/src/platform/: android.rs  mod.rs
crates/markdown-neuraxis-dioxus/src/ui/: app.rs
crates/markdown-neuraxis-dioxus/src/ui/components/: block.rs  block_quote.rs  blockquote_group.rs  code_fence.rs  collapse_context_menu.rs  content_group.rs  document_content.rs  editor_block.rs  empty_document.rs  error_screen.rs  heading.rs  html_block.rs  list_children.rs  list_component.rs  list_group.rs  list_item_component.rs  list_item_content.rs  main_panel.rs  mod.rs  paragraph.rs  setup_screen.rs  single_block.rs  text_segment.rs  thematic_break.rs  tree_view.rs  tree_view_item.rs  unhandled_markdown.rs
crates/markdown-neuraxis-dioxus/tests/: anchor_id_confusion_during_editing_test.rs  anchor_stability_tests.rs  click_event_mapping_bug_test.rs  different_content_same_anchor_test.rs  dioxus_rendering_tests.rs  document_clone_bug_test.rs  editing_lifecycle_bug_test.rs  exact_collision_reproduction_test.rs  failing_textarea_bug_test.rs  integration_ui_boundaries.rs  order_dependent_anchor_generation_test.rs  test_helpers.rs  ui_component_tests.rs
crates/markdown-neuraxis-engine/: Cargo.toml  build.rs
crates/markdown-neuraxis-engine/benches/: anchors.rs  commands.rs  common.rs  document.rs  integration.rs  parsing.rs  performance_bottlenecks.rs  point_description.rs  snapshot.rs
crates/markdown-neuraxis-engine/src/: lib.rs
crates/markdown-neuraxis-engine/src/editing/: anchors.rs  commands.rs  document.rs  mod.rs  snapshot.rs  snapshot_v2.rs
crates/markdown-neuraxis-engine/src/editing/snapshots/: asterisk_thematic_break.md  asterisk_thematic_break.snap  blockquote_with_inline.md  blockquote_with_inline.snap  blockquote_with_list.md  blockquote_with_list.snap  complex_document.md  complex_document.snap  consecutive_headings_hardbreak.snap  deeply_nested_lists.snap  empty.snap  fenced_code_no_inlines.md  fenced_code_no_inlines.snap  fenced_code_no_lang.md  fenced_code_no_lang.snap  fenced_code_with_lang.snap  hard_break_simple.snap  heading_no_space.snap  heading_with_content.snap  heading_with_inline.md  heading_with_inline.snap  headings_all_levels.snap  image_inline.md  image_inline.snap  inline_code.md  inline_code.snap  inline_emphasis.md  inline_emphasis.snap  inline_links.snap  link_with_emphasis.md  link_with_emphasis.snap  list_container_no_inlines.md  list_container_no_inlines.snap  list_hanging_indent.md  list_hanging_indent.snap  list_item_multiline.md  list_item_multiline.snap  list_with_code_block.md  list_with_code_block.snap  list_with_inline.md  (+26 more)
crates/markdown-neuraxis-engine/src/io/: mod.rs
crates/markdown-neuraxis-engine/src/models/: file_model.rs  file_tree.rs  markdown_file.rs  mod.rs
crates/markdown-neuraxis-engine/src/parsing/: mod.rs
crates/markdown-neuraxis-engine/src/parsing/blocks/: builder.rs  classify.rs  containers.rs  content.rs  mod.rs  open.rs  types.rs
crates/markdown-neuraxis-engine/src/parsing/inline/: cursor.rs  mod.rs  parser.rs  types.rs
crates/markdown-neuraxis-engine/src/tests/: mod.rs
crates/markdown-neuraxis-engine/tests/: parsing_snapshots.rs
crates/markdown-neuraxis-engine/tests/snapshots/: parsing_snapshots__combos__lossless_spans.snap  parsing_snapshots__combos__nested_quote_fence.snap  parsing_snapshots__combos__simple_code_fence.snap  parsing_snapshots__combos__simple_paragraph.snap  parsing_snapshots__combos__wikilinks_raw_zones.snap
crates/markdown-neuraxis-ffi/: Cargo.toml
crates/markdown-neuraxis-ffi/src/: lib.rs
crates/markdown-neuraxis-syntax/: Cargo.toml  build.rs
crates/markdown-neuraxis-syntax/src/: lexer.rs  lib.rs  syntax_kind.rs
crates/markdown-neuraxis-syntax/src/parser/: event.rs  mod.rs  sink.rs
crates/markdown-neuraxis-syntax/src/snapshots/: complex_document.snap  frontmatter.md  frontmatter.snap  hard_breaks.md  hard_breaks.snap  inline_elements.md  inline_elements.snap  list_blank_lines.snap  markdown_neuraxis_syntax__tests__snapshot_complex_document.snap  markdown_neuraxis_syntax__tests__snapshot_fenced_code.snap  markdown_neuraxis_syntax__tests__snapshot_heading.snap  markdown_neuraxis_syntax__tests__snapshot_inline_elements.snap  markdown_neuraxis_syntax__tests__snapshot_messy_real_world_notes.snap  markdown_neuraxis_syntax__tests__snapshot_messy_unclosed_constructs.snap  markdown_neuraxis_syntax__tests__snapshot_nested_content.snap  messy_real_world_notes.md  messy_real_world_notes.snap  messy_unclosed_constructs.md  messy_unclosed_constructs.snap  nested_content.md  nested_content.snap  nested_list_siblings.snap  nested_lists.md  nested_lists.snap  simple_paragraph.snap  standard_link.md  standard_link.snap  wikilink_with_alias.md  wikilink_with_alias.snap
(+531 files in other folders)
