[package]
name = "markdown-neuraxis"
version = "0.1.0"
edition = "2024"
authors = ["Tim Abell"]
description = "Local-first structured thought and knowledge management tool"
license = "AGPL-3.0"
repository = "https://github.com/timabell/markdown-neuraxis"

[dependencies]
anyhow = "1.0"
pulldown-cmark = "0.13"
serde = { version = "1.0", features = ["derive"] }
dioxus = { version = "0.6", features = ["desktop"] }
thiserror = "2.0"
uuid = { version = "1.18", features = ["v4", "serde"] }
relative-path = { version = "2.0", features = ["serde"] }
xi-rope = "0.3"
tree-sitter = "0.25"
tree-sitter-md = "0.3"
html-escape = "0.2"

[dev-dependencies]
rstest = "0.26"
insta = { version = "1.43", features = ["yaml"] }
pretty_assertions = "1.4"
tempfile = "3.21"
