[workspace]
resolver = "2"
members = [
    "crates/markdown-neuraxis-engine",
    "crates/markdown-neuraxis-dioxus",
    "crates/markdown-neuraxis-cli",
    "crates/markdown-neuraxis-config",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Tim Abell"]
description = "Local-first structured thought and knowledge management tool"
license = "AGPL-3.0-only"
repository = "https://github.com/timabell/markdown-neuraxis"

[workspace.dependencies]
# Core dependencies
anyhow = "1.0"
pulldown-cmark = "0.13"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
uuid = { version = "1.18", features = ["v4", "serde"] }
relative-path = { version = "2.0", features = ["serde"] }
xi-rope = "0.3"
tree-sitter = "0.25"
tree-sitter-md = "0.3"
html-escape = "0.2"
regex = "1.11"

# UI dependencies
dioxus = { version = "0.6", features = ["desktop"] }
ratatui = "0.29"
crossterm = "0.29"

# Dev dependencies
rstest = "0.26"
insta = { version = "1.43", features = ["yaml"] }
pretty_assertions = "1.4"
tempfile = "3.22"
dioxus-ssr = "0.6"
criterion = { version = "0.7", features = ["html_reports"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
