[package]
name = "markdown-neuraxis-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Configuration management for markdown-neuraxis"
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
toml = "0.9"
anyhow = { workspace = true }
thiserror = { workspace = true }
glob = "0.3"
shellexpand = "3.1"

[dev-dependencies]
tempfile = { workspace = true }
