[package]
name = "markdown-neuraxis-dioxus"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Dioxus desktop UI for markdown-neuraxis"
license.workspace = true
repository.workspace = true

[[bin]]
name = "markdown-neuraxis-dioxus"
path = "src/main.rs"

[dependencies]
markdown-neuraxis-engine = { path = "../markdown-neuraxis-engine" }
markdown-neuraxis-config = { path = "../markdown-neuraxis-config" }
dioxus = { workspace = true }
relative-path = { workspace = true }
log = "0.4"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15"

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.11"

[dev-dependencies]
dioxus-ssr = { workspace = true }
tempfile = { workspace = true }
insta = { workspace = true }
pretty_assertions = { workspace = true }
