[package]
name = "markdown-neuraxis-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Core processing engine for markdown-neuraxis"
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
pulldown-cmark = { workspace = true }
thiserror = { workspace = true }
relative-path = { workspace = true }
xi-rope = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-md = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
insta = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
criterion = "0.8"

[[bench]]
name = "document"
harness = false

[[bench]]
name = "commands"
harness = false

[[bench]]
name = "anchors"
harness = false

[[bench]]
name = "snapshot"
harness = false

[[bench]]
name = "point_description"
harness = false

[[bench]]
name = "integration"
harness = false

[[bench]]
name = "parsing"
harness = false
